--- a/mystyling.css
+++ b/mystyling.css
@@ -4,7 +4,7 @@
 }
 
 .panel-title {
-  font-size: 30px;
+  font-size: 20px;
   text-align: center;
 }
 
@@ -27,4 +27,38 @@
 
 .links {
   text-align: center;
+}
+
+.surfboard {
+  background-image:url('images/surfboard.png');
+  background-color: white;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: 0% 100%;
+  width: 390px;
+  height: 294px;
+}
+
+.me-container {
+  background-image:url('images/me.png');
+  background-color: white;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  width: 172px;
+  height: 254px;
+  border-radius: 32px;
+  border-width: 2px;
+  border-color: rgba(12, 30, 240, 0.14);
+  border-style: solid;
+  box-shadow: 2px 2px 20px #888888;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.me {
+  max-width: 150px;
+}
+
+#pic-container {
+  margin-top: 60px;
 }
