--- a/mystyling.css
+++ b/mystyling.css
@@ -1,10 +1,16 @@
 .icon {
   max-width: 100px;
   max-height: 100px;
+  margin-left: 22px;
+  margin-right: 22px;
 }
 
 .panel-title {
   font-size: 20px;
+  text-align: center;
+}
+
+.panel-body {
   text-align: center;
 }
 
